// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RequestReset />  calls the mutation 1`] = `
<form
  className="Form-sc-1h5xw8s-0 jIreny"
  data-test="form"
  method="post"
  onSubmit={[Function]}
>
  <fieldset
    aria-busy={true}
    disabled={true}
  >
    <h2>
      Reset your password
    </h2>
    <DisplayError
      error={Object {}}
    />
    <label
      htmlFor="email"
    >
      Email
      <input
        name="email"
        onChange={[Function]}
        placeholder="email"
        type="email"
        value="lambertpatrick09@gmail.com"
      />
    </label>
    <button
      type="submit"
    >
      Request a reset!
    </button>
  </fieldset>
</form>
`;

exports[`<RequestReset />  renders and matches snapshot 1`] = `
<form
  className="Form-sc-1h5xw8s-0 jIreny"
  data-test="form"
  method="post"
  onSubmit={[Function]}
>
  <fieldset
    aria-busy={false}
    disabled={false}
  >
    <h2>
      Reset your password
    </h2>
    <DisplayError
      error={Object {}}
    />
    <label
      htmlFor="email"
    >
      Email
      <input
        name="email"
        onChange={[Function]}
        placeholder="email"
        type="email"
        value=""
      />
    </label>
    <button
      type="submit"
    >
      Request a reset!
    </button>
  </fieldset>
</form>
`;
